--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
+    "aws-sdk": "^2.1399.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
