configuring dynamo connection

--- a/fiap-application/local.env
+++ b/fiap-application/local.env
@@ -1,8 +1,8 @@
-AWS_REGION=your-aws-region
-AWS_ACCESS_KEY_ID=your-aws-access-key-id
-AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+export AWS_REGION=us-east-1
+export AWS_ACCESS_KEY_ID=your-aws-access-key-id
+export AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 
-LOCALSTACK_ENDPOINT=http://localhost:4566
-LOCALSTACK_ACCESS_KEY_ID=your-localstack-access-key-id
-LOCALSTACK_SECRET_ACCESS_KEY=your-localstack-secret-access-key
-USE_LOCALSTACK=true
+export LOCALSTACK_ENDPOINT=http://localhost:4566
+export LOCALSTACK_ACCESS_KEY_ID=
+export LOCALSTACK_SECRET_ACCESS_KEY=
+export USE_LOCALSTACK=true
