configuring mongodb connection

--- a/fiap-application/local.env
+++ b/fiap-application/local.env
@@ -6,3 +6,5 @@ export LOCALSTACK_ENDPOINT=http://localhost:4566
 export LOCALSTACK_ACCESS_KEY_ID=
 export LOCALSTACK_SECRET_ACCESS_KEY=
 export USE_LOCALSTACK=true
+
+export MONGODB_CONNECTION_STRING=mongodb://localhost:27017
