--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
     "aws-sdk": "^2.1402.0",
+    "mongodb": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuidv4": "^6.2.13"
