configuring mongodb connection

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,13 @@ services:
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+  mongodb:
+    image: mongo:latest
+    container_name: "mongodb-fiap"
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    ports:
+      - 27017:27017
+      - 27020:27020
+    command: mongod
