--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "decimal.js": "^10.4.3",
     "mongodb": "^5.6.0",
