--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,4 +19,14 @@ services:
     command: mongoimport --host mongodb:27017 --db fiap --collection Products --file ./data/products.json --jsonArray
     depends_on:
       - mongodb
+  app:
+    build: ./fiap-application
+    container_name: fiap-pedido
+    ports:
+      - 8080:8080
+    environment:
+        - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/fiap
+    depends_on:
+      - mongodb
+
 
