--- a/fiap-application/local.env
+++ b/fiap-application/local.env
@@ -1,10 +1,1 @@
-export AWS_REGION=us-east-1
-export AWS_ACCESS_KEY_ID=your-aws-access-key-id
-export AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
-
-export LOCALSTACK_ENDPOINT=http://localhost:4566
-export LOCALSTACK_ACCESS_KEY_ID=
-export LOCALSTACK_SECRET_ACCESS_KEY=
-export USE_LOCALSTACK=true
-
-export MONGODB_CONNECTION_STRING=mongodb://localhost:27017
+export MONGODB_CONNECTION_STRING=mongodb://localhost:27017/fiap
