--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
       - 27017:27017
       - 27020:27020
     command: mongod
+    networks:
+      - fiap-network
   mongoimport:
     image: mongo:latest
     container_name: fiap-import
@@ -19,6 +21,8 @@ services:
     command: mongoimport --host mongodb:27017 --db fiap --collection Products --file ./data/products.json --jsonArray
     depends_on:
       - mongodb
+    networks:
+      - fiap-network
   app:
     build: ./fiap-application
     container_name: fiap-pedido
@@ -28,5 +32,10 @@ services:
         - MONGODB_CONNECTION_STRING=mongodb://mongodb:27017/fiap
     depends_on:
       - mongodb
+    networks:
+      - fiap-network
+networks:
+  fiap-network:
+    driver: bridge
 
 
