--- a/fiap-application/Dockerfile
+++ b/fiap-application/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:16-alpine
 WORKDIR /app
-COPY . .
+COPY src .
+COPY package.json .
 ARG PORT=8080
+RUN yarn install
 EXPOSE ${PORT}
-CMD ["yarn", "start:prod"]
+CMD ["yarn", "start"]
