--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - 27017:27017
       - 27020:27020
     command: mongod
+
     networks:
       - fiap-network
   mongoimport:
@@ -18,7 +19,13 @@ services:
     container_name: fiap-import
     volumes:
       - ./data-import/products.json:/data/products.json
-    command: mongoimport --host mongodb:27017 --db fiap --collection Products --file ./data/products.json --jsonArray
+      - ./data-import/users.json:/data/users.json
+    command:
+      - /bin/sh
+      - -c
+      - |
+        mongoimport --host mongodb --db fiap --collection users --type json --file /data/users.json --jsonArray
+        mongoimport --host mongodb --db fiap --collection products --type json --file /data/products.json --jsonArray
     depends_on:
       - mongodb
     networks:
