--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fiap-application",
+  "name": "fiap-checkout-application",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -24,14 +24,17 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -44,11 +47,11 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "29.5.0",
+    "jest": "^29.5.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "29.1.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
