--- a/fiap-k8s/app-deployment.yaml
+++ b/fiap-k8s/app-deployment.yaml
@@ -34,8 +34,8 @@ spec:
             - containerPort: 8080
           resources:
             requests:
-              cpu: 500m
-              memory: 2G
+              cpu: 250m
+              memory: 512Mi
             limits:
               cpu: 500m
-              memory: 2G
+              memory: 1G
