--- a/fiap-k8s/mongodb-statefulset.yaml
+++ b/fiap-k8s/mongodb-statefulset.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: mongodb
           image: mongo:4.4.18
+          imagePullPolicy: Always
           env:
             - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
