--- a/.github/workflows/pr_validation.yaml
+++ b/.github/workflows/pr_validation.yaml
@@ -26,12 +26,15 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Yarn
+        working-directory: ./fiap-application
         run: npm install -g yarn
 
       - name: Install dependencies
+        working-directory: ./fiap-application
         run: yarn install
 
       - name: Run tests
+        working-directory: ./fiap-application
         run: yarn test --passWithNoTests
 
       - name: Store code coverage results
