--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,9 @@ sonar.projectVersion=1.0
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=src
-sonar.tests=src
-sonar.test.inclusions=src/**/*.spec.ts
+sonar.sources=fiap-application/src
+sonar.tests=fiap-application/src
+sonar.test.inclusions=fiap-application/src/**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/test-report.xml
 
