--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=fiap-application/src
 sonar.tests=fiap-application/src
 sonar.test.inclusions=fiap-application/src/**/*.spec.ts
+sonar.exclusions=src/infrastructure/mocks/**,src/main.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/test-report.xml
 
