--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -13,9 +13,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --runInBand",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -31,6 +31,7 @@
     "mongodb": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "test-utils": "^1.1.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -48,8 +49,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^29.5.0",
-    "jest-sonar-reporter": "^2.0.0",
     "jest-sonar": "^0.2.16",
+    "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -66,5 +67,4 @@
   },
   "main": "main.ts",
   "repository": "git@github.com:silvertonsg-fiap/soat23-gp14-pedido.git"
-
 }
