--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -31,6 +31,7 @@
     "mongodb": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "test-utils": "^1.1.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
