--- a/fiap-application/sonar-project.properties
+++ b/fiap-application/sonar-project.properties
@@ -12,6 +12,7 @@ sonar.tests=fiap-application/src
 sonar.test.inclusions=fiap-application/src/**/*.spec.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=coverage/test-report.xml
+sonar.exclusions=src/infrastructure/mocks/**,src/main.ts
 
 # Fail the pipeline when gate quality condition are not met
 sonar.qualitygate.wait=true
