--- a/fiap-application/package.json
+++ b/fiap-application/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/microservices": "^9.4.2",
     "@nestjs/platform-express": "^9.0.0",
+    "@ssut/nestjs-sqs": "^2.2.0",
+    "aws-sdk": "^2.1579.0",
     "axios": "^1.6.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
