adicionando compesação do saga

--- a/fiap-application/local.env
+++ b/fiap-application/local.env
@@ -1,3 +1,9 @@
 export MONGODB_CONNECTION_STRING=mongodb://localhost:27017/fiap
 
-export CLUSTER_URL=http://localhost:8080
+export CLUSTER_URL=http://localhost:8081
+
+export AWS_REGION=us-east-1
+export AWS_PEDIDOS_QUEUE=order-request
+export AWS_PEDIDOS_QUEUE_URL=
+export AWS_PEDIDOS_RESPONSE_QUEUE=order-response
+export AWS_PEDIDOS_RESPONSE_QUEUE_URL=
